--- a/src/main/resources/templates/admin/content/newsAdd.html
+++ b/src/main/resources/templates/admin/content/newsAdd.html
@@ -12,7 +12,7 @@
 			<!-- Breadcrumbs line -->
 			<div class="crumbs">
 				<ul id="breadcrumbs" class="breadcrumb">
-					<li><i class="icon-home"></i> <a href="/">仪表盘</a></li>
+					<li><i class="icon-home"></i> <a href="/b8a3/">仪表盘</a></li>
 					<li class="current">新闻管理</li>
 				</ul>
 
