--- a/src/main/resources/templates/admin/content/profile.html
+++ b/src/main/resources/templates/admin/content/profile.html
@@ -12,7 +12,7 @@
 			<!-- Breadcrumbs line -->
 			<div class="crumbs">
 				<ul id="breadcrumbs" class="breadcrumb">
-					<li><i class="icon-home"></i> <a href="/">仪表盘</a>
+					<li><i class="icon-home"></i> <a href="/b8a3/">仪表盘</a>
 					</li>
 					<li class="current"><a href="pages_calendar.html" title="">个人资料</a>
 					</li>
