--- a/src/main/resources/templates/admin/layouts/sidebar.html
+++ b/src/main/resources/templates/admin/layouts/sidebar.html
@@ -24,28 +24,28 @@
 				<div class="sidebar-title">
 					<span>后台管理</span>
 				</div>
-				<li th:class="${dashboard} ? 'current' : ''"><a href="/">
+				<li th:class="${dashboard} ? 'current' : ''"><a href="/b8a3/">
 						<i class="icon-dashboard"></i> 仪表盘
 				</a></li>
-				<li th:class="${user} ? 'current' : ''"><a href="/admin/user"> <i
+				<li th:class="${user} ? 'current' : ''"><a href="/b8a3/admin/user"> <i
 						class="icon-user"></i> 用户管理
 				</a></li>
-				<li th:class="${news} ? 'current' : ''"><a href="/admin/news"> <i
+				<li th:class="${news} ? 'current' : ''"><a href="/b8a3/admin/news"> <i
 						class="icon-list"></i> 新闻管理
 				</a></li>
 				<div class="sidebar-title">
 					<span>系统配置</span>
 				</div>
-				<li th:class="${thirdparty} ? 'current' : ''"><a href="/admin/thirdparty"> <i
+				<li th:class="${thirdparty} ? 'current' : ''"><a href="/b8a3/admin/thirdparty"> <i
 						class="icon-cogs"></i> 第三方配置
 				</a></li>
 				<div class="sidebar-title">
 					<span>API管理</span>
 				</div>
-				<li><a href="/swagger-ui.html" target="_blank"> <i
+				<li><a href="/b8a3/swagger-ui.html" target="_blank"> <i
 						class="icon-rocket"></i> 在线API手册
 				</a></li>
-				<!-- 				<li><a href="/lightadmin" target="_blank"> <i
+				<!-- 				<li><a href="/b8a3/lightadmin" target="_blank"> <i
 						class="icon-book"></i> 后端数据管理
 				</a></li> -->
 
