--- a/src/main/resources/templates/admin/layouts/top.html
+++ b/src/main/resources/templates/admin/layouts/top.html
@@ -134,7 +134,7 @@
 							<p>你有 1 条未读信息</p>
 						</li>
 						<li><a href="javascript:void(0);"> <span class="photo"><img
-									src="/assets/img/demo/avatar-1.jpg" alt="" /></span> <span
+									src="/b8a3/assets/img/demo/avatar-1.jpg" alt="" /></span> <span
 								class="subject"> <span class="from">马云</span> <span
 									class="time">刚刚</span>
 							</span> <span class="text"> 货款已支付... </span>
@@ -156,7 +156,7 @@
 				</a>
 					<ul class="dropdown-menu">
 						<li><a href="profile"><i class="icon-user"></i> 个人资料</a></li>
-						<li><a href="/logout"><i class="icon-power-off"></i> 退出</a></li>
+						<li><a href="/b8a3/logout"><i class="icon-power-off"></i> 退出</a></li>
 					</ul></li>
 				<!-- /user login dropdown -->
 			</ul>
