--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <meta charset="UTF-8" />
-<meta http-equiv="refresh" content="0; url=/admin/" />
+<meta http-equiv="refresh" content="0; url=/b8a3/admin/" />
 <title>Welcome</title>
 </head>
 <body>
