--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,37 +10,37 @@
 <!--=== CSS ===-->
 
 <!-- Bootstrap -->
-<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet"
+<link href="/b8a3/bootstrap/css/bootstrap.min.css" rel="stylesheet"
 	type="text/css" />
 
 <!-- Theme -->
-<link href="/assets/css/main.css" rel="stylesheet" type="text/css" />
-<link href="/assets/css/plugins.css" rel="stylesheet" type="text/css" />
-<link href="/assets/css/responsive.css" rel="stylesheet" type="text/css" />
-<link href="/assets/css/icons.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/main.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/plugins.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/responsive.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/icons.css" rel="stylesheet" type="text/css" />
 
 <!-- Login -->
-<link href="/assets/css/login.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/login.css" rel="stylesheet" type="text/css" />
 
 <link rel="stylesheet"
-	href="/assets/css/fontawesome/font-awesome.min.css" />
+	href="/b8a3/assets/css/fontawesome/font-awesome.min.css" />
 <!--[if IE 7]>
-		<link rel="stylesheet" href="/assets/css/fontawesome/font-awesome-ie7.min.css">
+		<link rel="stylesheet" href="/b8a3/assets/css/fontawesome/font-awesome-ie7.min.css">
 	<![endif]-->
 
 <!--[if IE 8]>
-		<link href="/assets/css/ie8.css" rel="stylesheet" type="text/css" />
+		<link href="/b8a3/assets/css/ie8.css" rel="stylesheet" type="text/css" />
 	<![endif]-->
 <!-- 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css' />
  -->
 <!--=== JavaScript ===-->
 
 <script type="text/javascript"
-	src="/assets/js/libs/jquery-1.10.2.min.js"></script>
+	src="/b8a3/assets/js/libs/jquery-1.10.2.min.js"></script>
 
-<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/b8a3/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript"
-	src="/assets/js/libs/lodash.compat.min.js"></script>
+	src="/b8a3/assets/js/libs/lodash.compat.min.js"></script>
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -49,19 +49,19 @@
 
 <!-- Beautiful Checkboxes -->
 <script type="text/javascript"
-	src="/plugins/uniform/jquery.uniform.min.js"></script>
+	src="/b8a3/plugins/uniform/jquery.uniform.min.js"></script>
 
 <!-- Form Validation -->
 <script type="text/javascript"
-	src="/plugins/validation/jquery.validate.min.js"></script>
+	src="/b8a3/plugins/validation/jquery.validate.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/validation/localization/messages_zh.js"></script>
+	src="/b8a3/plugins/validation/localization/messages_zh.js"></script>
 
 <!-- Slim Progress Bars -->
-<script type="text/javascript" src="/plugins/nprogress/nprogress.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/nprogress/nprogress.js"></script>
 
 <!-- App -->
-<script type="text/javascript" src="/assets/js/login.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/login.js"></script>
 <script>
 	$(document).ready(function() {
 		"use strict";
