--- a/src/main/resources/templates/admin/layouts/header.html
+++ b/src/main/resources/templates/admin/layouts/header.html
@@ -11,7 +11,7 @@
 <!--=== CSS ===-->
 
 <!-- Bootstrap -->
-<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet"
+<link href="/b8a3/bootstrap/css/bootstrap.min.css" rel="stylesheet"
 	type="text/css" />
 
 <!-- jQuery UI -->
@@ -21,19 +21,19 @@
 	<![endif]-->
 
 <!-- Theme -->
-<link href="/assets/css/main.css" rel="stylesheet" type="text/css" />
-<link href="/assets/css/plugins.css" rel="stylesheet" type="text/css" />
-<link href="/assets/css/responsive.css" rel="stylesheet" type="text/css" />
-<link href="/assets/css/icons.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/main.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/plugins.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/responsive.css" rel="stylesheet" type="text/css" />
+<link href="/b8a3/assets/css/icons.css" rel="stylesheet" type="text/css" />
 
 <link rel="stylesheet"
-	href="/assets/css/fontawesome/font-awesome.min.css" />
+	href="/b8a3/assets/css/fontawesome/font-awesome.min.css" />
 <!--[if IE 7]>
-		<link rel="stylesheet" href="/assets/css/fontawesome/font-awesome-ie7.min.css">
+		<link rel="stylesheet" href="/b8a3/assets/css/fontawesome/font-awesome-ie7.min.css">
 	<![endif]-->
 
 <!--[if IE 8]>
-		<link href="/assets/css/ie8.css" rel="stylesheet" type="text/css" />
+		<link href="/b8a3/assets/css/ie8.css" rel="stylesheet" type="text/css" />
 	<![endif]-->
 <!--
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
@@ -41,37 +41,37 @@
 <!--=== JavaScript ===-->
 
 <script type="text/javascript"
-	src="/assets/js/libs/jquery-1.10.2.min.js"></script>
+	src="/b8a3/assets/js/libs/jquery-1.10.2.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/jquery-ui/jquery-ui-1.10.2.custom.min.js"></script>
+	src="/b8a3/plugins/jquery-ui/jquery-ui-1.10.2.custom.min.js"></script>
 
-<script type="text/javascript" src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/b8a3/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript"
-	src="/assets/js/libs/lodash.compat.min.js"></script>
+	src="/b8a3/assets/js/libs/lodash.compat.min.js"></script>
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
-		<script src="/assets/js/libs/html5shiv.js"></script>
+		<script src="/b8a3/assets/js/libs/html5shiv.js"></script>
 	<![endif]-->
 
 <!-- Smartphone Touch Events -->
 <script type="text/javascript"
-	src="/plugins/touchpunch/jquery.ui.touch-punch.min.js"></script>
+	src="/b8a3/plugins/touchpunch/jquery.ui.touch-punch.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/event.swipe/jquery.event.move.js"></script>
+	src="/b8a3/plugins/event.swipe/jquery.event.move.js"></script>
 <script type="text/javascript"
-	src="/plugins/event.swipe/jquery.event.swipe.js"></script>
+	src="/b8a3/plugins/event.swipe/jquery.event.swipe.js"></script>
 
 <!-- General -->
-<script type="text/javascript" src="/assets/js/libs/breakpoints.js"></script>
-<script type="text/javascript" src="/plugins/respond/respond.min.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/libs/breakpoints.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/respond/respond.min.js"></script>
 <!-- Polyfill for min/max-width CSS3 Media Queries (only for IE8) -->
 <script type="text/javascript"
-	src="/plugins/cookie/jquery.cookie.min.js"></script>
+	src="/b8a3/plugins/cookie/jquery.cookie.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+	src="/b8a3/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/slimscroll/jquery.slimscroll.horizontal.min.js"></script>
+	src="/b8a3/plugins/slimscroll/jquery.slimscroll.horizontal.min.js"></script>
 
 <!-- Page specific plugins -->
 <!-- Charts -->
@@ -79,44 +79,44 @@
 		<script type="text/javascript" src="plugins/flot/excanvas.min.js"></script>
 	<![endif]-->
 <script type="text/javascript"
-	src="/plugins/sparkline/jquery.sparkline.min.js"></script>
-<script type="text/javascript" src="/plugins/flot/jquery.flot.min.js"></script>
+	src="/b8a3/plugins/sparkline/jquery.sparkline.min.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/flot/jquery.flot.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/flot/jquery.flot.tooltip.min.js"></script>
+	src="/b8a3/plugins/flot/jquery.flot.tooltip.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/flot/jquery.flot.resize.min.js"></script>
+	src="/b8a3/plugins/flot/jquery.flot.resize.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/flot/jquery.flot.time.min.js"></script>
+	src="/b8a3/plugins/flot/jquery.flot.time.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/flot/jquery.flot.growraf.min.js"></script>
+	src="/b8a3/plugins/flot/jquery.flot.growraf.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
+	src="/b8a3/plugins/easy-pie-chart/jquery.easy-pie-chart.min.js"></script>
 
 <script type="text/javascript"
-	src="/plugins/daterangepicker/moment.min.js"></script>
+	src="/b8a3/plugins/daterangepicker/moment.min.js"></script>
 <script type="text/javascript"
-	src="/plugins/daterangepicker/daterangepicker.js"></script>
+	src="/b8a3/plugins/daterangepicker/daterangepicker.js"></script>
 <script type="text/javascript"
-	src="/plugins/blockui/jquery.blockUI.min.js"></script>
+	src="/b8a3/plugins/blockui/jquery.blockUI.min.js"></script>
 
 <script type="text/javascript"
-	src="/plugins/fullcalendar/fullcalendar.min.js"></script>
+	src="/b8a3/plugins/fullcalendar/fullcalendar.min.js"></script>
 
 <!-- Noty -->
-<script type="text/javascript" src="/plugins/noty/jquery.noty.js"></script>
-<script type="text/javascript" src="/plugins/noty/layouts/top.js"></script>
-<script type="text/javascript" src="/plugins/noty/themes/default.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/noty/jquery.noty.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/noty/layouts/top.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/noty/themes/default.js"></script>
 
 <!-- Forms -->
 <script type="text/javascript"
-	src="/plugins/uniform/jquery.uniform.min.js"></script>
-<script type="text/javascript" src="/plugins/select2/select2.min.js"></script>
+	src="/b8a3/plugins/uniform/jquery.uniform.min.js"></script>
+<script type="text/javascript" src="/b8a3/plugins/select2/select2.min.js"></script>
 
 <!-- App -->
-<script type="text/javascript" src="/assets/js/app.js"></script>
-<script type="text/javascript" src="/assets/js/plugins.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/app.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/plugins.js"></script>
 <script type="text/javascript"
-	src="/assets/js/plugins.form-components.js"></script>
+	src="/b8a3/assets/js/plugins.form-components.js"></script>
 
 <script>
 	$(document).ready(function() {
@@ -129,19 +129,19 @@
 </script>
 
 <!-- Demo JS -->
-<script type="text/javascript" src="/assets/js/custom.js"></script>
-<script type="text/javascript" src="/assets/js/demo/charts.js"></script>
-<script type="text/javascript" src="/assets/js/demo/pages_calendar.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/custom.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/demo/charts.js"></script>
+<script type="text/javascript" src="/b8a3/assets/js/demo/pages_calendar.js"></script>
 <script type="text/javascript"
-	src="/assets/js/demo/charts/chart_filled_green.js"></script>
+	src="/b8a3/assets/js/demo/charts/chart_filled_green.js"></script>
 <script type="text/javascript"
-	src="/assets/js/demo/charts/chart_filled_red.js"></script>
+	src="/b8a3/assets/js/demo/charts/chart_filled_red.js"></script>
 <script type="text/javascript"
-	src="/assets/js/demo/charts/chart_filled_blue.js"></script>
+	src="/b8a3/assets/js/demo/charts/chart_filled_blue.js"></script>
 <script type="text/javascript"
-	src="/assets/js/demo/charts/chart_simple.js"></script>
+	src="/b8a3/assets/js/demo/charts/chart_simple.js"></script>
 <script type="text/javascript"
-	src="/assets/js/demo/charts/chart_updating.js"></script>
+	src="/b8a3/assets/js/demo/charts/chart_updating.js"></script>
 </head>
 
 <body>
